--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             <input type="number" id="height" placeholder="Enter height in cm" required>
             <input type="number" id="age" placeholder="Age" required>
             <select id="gender" required>
+                <option value="" disabled selected >Gender</option>\
                 <option value="male">Male</option>
                 <option value="female">Female</option>
             </select>
             <select id="activity" required>
+                <option value="" disabled selected >Activity</option>
                 <option value="light">Light</option>
                 <option value="moderate">Moderate</option>
                 <option value="active">Active</option>
@@ -44,4 +46,3 @@
     <script src="App.js"></script>
 </body>
 </html>
-
